# griffe2md

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: covindex.html  d_4e09476e56be4825_cli_py.html  d_4e09476e56be4825_debug_py.html  d_4e09476e56be4825_main_py.html  d_4e09476e56be4825_rendering_py.html  d_a44f0ac069e85531_test_cli_py.html  index.html  status.json
credits/: index.html
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
docs/reference/: api.md
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/griffe2md/: index.html
reference/griffe2md/cli/: index.html
reference/griffe2md/debug/: index.html
reference/griffe2md/main/: index.html
reference/griffe2md/rendering/: index.html
scripts/: gen_credits.py  make
search/: search_index.json
src/griffe2md/: __init__.py  cli.py  config.py  debug.py  main.py  rendering.py
src/griffe2md/_internal/: cli.py  config.py  debug.py  main.py  rendering.py
src/griffe2md/templates/: attribute.md  attribute.md.jinja  children.md  children.md.jinja  class.md  class.md.jinja  docstring.md  docstring.md.jinja  expression.md  expression.md.jinja  function.md  function.md.jinja  module.md  module.md.jinja  signature.md  signature.md.jinja  summary.md.jinja
src/griffe2md/templates/docstring/: admonition.md  admonition.md.jinja  attributes.md  attributes.md.jinja  classes.md.jinja  examples.md.jinja  functions.md.jinja  modules.md.jinja  other_parameters.md  other_parameters.md.jinja  parameters.md  parameters.md.jinja  raises.md  raises.md.jinja  receives.md  receives.md.jinja  returns.md  returns.md.jinja  warns.md  warns.md.jinja  yields.md  yields.md.jinja
src/griffe2md/templates/summary/: attributes.md.jinja  classes.md.jinja  functions.md.jinja  modules.md.jinja
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_markdown_spacing.py  test_rendering.py
