[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "griffe2md"
description = "Output API docs to Markdown using Griffe."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "griffe>=0.36.0",
    "jinja2>=3.1.2",
    "mdformat>=0.7.16",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/griffe2md"
Documentation = "https://mkdocstrings.github.io/griffe2md"
Changelog = "https://mkdocstrings.github.io/griffe2md/changelog"
Repository = "https://github.com/mkdocstrings/griffe2md"
Issues = "https://github.com/mkdocstrings/griffe2md/issues"
Discussions = "https://github.com/mkdocstrings/griffe2md/discussions"
Gitter = "https://gitter.im/mkdocstrings/griffe2md"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
griffe2md = "griffe2md.cli:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
